Clean up netconf-console
This is all-round cleanup of the component, including migration to
JUnit5.

Change-Id: I53275bd2bf4edd794a796938c5f58e1d4763aa8b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>