@@ -5,117 +5,111 @@
  * terms of the Eclipse Public License v1.0 which accompanies this distribution,
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
-
 package org.opendaylight.netconf.console.commands;
 
-import static junit.framework.TestCase.assertEquals;
-import static junit.framework.TestCase.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.opendaylight.netconf.console.api.NetconfCommands;
 import org.opendaylight.netconf.console.utils.NetconfConsoleConstants;
 
-@RunWith(MockitoJUnitRunner.StrictStubs.class)
-public class NetconfCommandsImplCallsTest {
-
+@ExtendWith(MockitoExtension.class)
+class NetconfCommandsImplCallsTest {
     @Mock
     private NetconfCommands netconfCommands;
 
     @Test
-    public void testConnectDeviceCommand() throws Exception {
-        NetconfConnectDeviceCommand netconfConnectDeviceCommand =
-                new NetconfConnectDeviceCommand(netconfCommands);
-        netconfConnectDeviceCommand.execute();
+    void testConnectDeviceCommand() throws Exception {
+        var netconfConnectDeviceCommand = new NetconfConnectDeviceCommand(netconfCommands);
+        assertEquals("Invalid IP:null or Port:nullPlease enter a valid entry to proceed.",
+            netconfConnectDeviceCommand.execute());
         verify(netconfCommands, times(0)).connectDevice(any(), any());
 
         netconfConnectDeviceCommand = new NetconfConnectDeviceCommand(netconfCommands, "192.168.1.1", "7777", "user",
             "pass");
 
-        netconfConnectDeviceCommand.execute();
+        assertEquals("Netconf connector added succesfully", netconfConnectDeviceCommand.execute());
         verify(netconfCommands, times(1)).connectDevice(any(), any());
     }
 
     @Test
-    public void testDisconnectDeviceCommand() throws Exception {
-        NetconfDisconnectDeviceCommand netconfDisconnectDeviceCommand =
-                new NetconfDisconnectDeviceCommand(netconfCommands);
-        netconfDisconnectDeviceCommand.execute();
+    void testDisconnectDeviceCommand() throws Exception {
+        var netconfDisconnectDeviceCommand = new NetconfDisconnectDeviceCommand(netconfCommands);
+        assertEquals("Invalid IP:null or Port:nullPlease enter a valid entry to proceed.",
+            netconfDisconnectDeviceCommand.execute());
 
         verify(netconfCommands, times(0)).disconnectDevice(any(), any());
 
         netconfDisconnectDeviceCommand = new NetconfDisconnectDeviceCommand(netconfCommands, "deviceId", null, null);
 
         doReturn(true).when(netconfCommands).disconnectDevice(any());
-        netconfDisconnectDeviceCommand.execute();
+        assertEquals("Netconf connector disconnected succesfully", netconfDisconnectDeviceCommand.execute());
 
         verify(netconfCommands, times(1)).disconnectDevice(any());
 
-        netconfDisconnectDeviceCommand =
-                new NetconfDisconnectDeviceCommand(netconfCommands, null, "192.168.1.1", "7777");
-
+        netconfDisconnectDeviceCommand = new NetconfDisconnectDeviceCommand(netconfCommands, null, "192.168.1.1",
+            "7777");
         doReturn(true).when(netconfCommands).disconnectDevice(any(), any());
-        netconfDisconnectDeviceCommand.execute();
+        assertEquals("Netconf connector disconnected succesfully", netconfDisconnectDeviceCommand.execute());
 
         verify(netconfCommands, times(1)).disconnectDevice(any(), any());
     }
 
     @Test
-    public void testListDeviceCommand() throws Exception {
-        final NetconfListDevicesCommand netconfListDeviceCommand = new NetconfListDevicesCommand(netconfCommands);
+    void testListDeviceCommand() throws Exception {
+        final var netconfListDeviceCommand = new NetconfListDevicesCommand(netconfCommands);
         doReturn(getDeviceHashMap()).when(netconfCommands).listDevices();
 
-        netconfListDeviceCommand.execute();
+        assertNull(netconfListDeviceCommand.execute());
 
         verify(netconfCommands, times(1)).listDevices();
     }
 
     @Test
-    public void testShowDeviceCommand() throws Exception {
-        NetconfShowDeviceCommand netconfShowDeviceCommand = new NetconfShowDeviceCommand(netconfCommands);
-        netconfShowDeviceCommand.execute();
+    void testShowDeviceCommand() throws Exception {
+        var netconfShowDeviceCommand = new NetconfShowDeviceCommand(netconfCommands);
+        assertEquals("You must provide either the device Ip and the device Port or the device Id",
+            netconfShowDeviceCommand.execute());
 
         verify(netconfCommands, times(0)).showDevice(any());
 
         netconfShowDeviceCommand = new NetconfShowDeviceCommand(netconfCommands, "deviceId", null, null);
 
         doReturn(getDeviceHashMap()).when(netconfCommands).showDevice(any());
-        netconfShowDeviceCommand.execute();
+        assertNull(netconfShowDeviceCommand.execute());
 
         verify(netconfCommands, times(1)).showDevice(any());
 
         netconfShowDeviceCommand = new NetconfShowDeviceCommand(netconfCommands, null, "192.168.1.1", "7777");
 
         doReturn(getDeviceHashMap()).when(netconfCommands).showDevice(any(), any());
-        netconfShowDeviceCommand.execute();
+        assertNull(netconfShowDeviceCommand.execute());
 
         verify(netconfCommands, times(1)).showDevice(any(), any());
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    public void testUpdateDeviceCommand() throws Exception {
-        final NetconfUpdateDeviceCommand netconfUpdateDeviceCommand =
-                new NetconfUpdateDeviceCommand(netconfCommands, "192.168.1.1");
+    void testUpdateDeviceCommand() throws Exception {
+        final var netconfUpdateDeviceCommand = new NetconfUpdateDeviceCommand(netconfCommands, "192.168.1.1");
+        doReturn("").when(netconfCommands).updateDevice(isNull(), isNull(), isNull(), any());
 
-        final ArgumentCaptor<HashMap> hashMapArgumentCaptor = ArgumentCaptor.forClass(HashMap.class);
+        assertEquals("", netconfUpdateDeviceCommand.execute());
 
-        doReturn("").when(netconfCommands).updateDevice(isNull(), isNull(), isNull(), any(HashMap.class));
-
-        netconfUpdateDeviceCommand.execute();
-
+        final var hashMapArgumentCaptor = ArgumentCaptor.forClass(Map.class);
         verify(netconfCommands, times(1)).updateDevice(isNull(), isNull(), isNull(),
                 hashMapArgumentCaptor.capture());
 
@@ -123,15 +117,11 @@ public class NetconfCommandsImplCallsTest {
         assertEquals("192.168.1.1", hashMapArgumentCaptor.getValue().get(NetconfConsoleConstants.NETCONF_IP));
     }
 
-    private static HashMap<String, Map<String, List<String>>> getDeviceHashMap() {
-        final HashMap<String, Map<String, List<String>>> devices = new HashMap<>();
-        final HashMap<String, List<String>> deviceMap = new HashMap<>();
-        deviceMap.put(NetconfConsoleConstants.NETCONF_IP, Arrays.asList("192.168.1.1"));
-        deviceMap.put(NetconfConsoleConstants.NETCONF_PORT, Arrays.asList("7777"));
-        deviceMap.put(NetconfConsoleConstants.STATUS, Arrays.asList("connecting"));
-        deviceMap.put(NetconfConsoleConstants.AVAILABLE_CAPABILITIES, Arrays.asList("cap1", "cap2", "cap3"));
-        devices.put("device", deviceMap);
-        return devices;
+    private static Map<String, Map<String, List<String>>> getDeviceHashMap() {
+        return Map.of("device", Map.of(
+            NetconfConsoleConstants.NETCONF_IP, List.of("192.168.1.1"),
+            NetconfConsoleConstants.NETCONF_PORT, List.of("7777"),
+            NetconfConsoleConstants.STATUS, List.of("connecting"),
+            NetconfConsoleConstants.AVAILABLE_CAPABILITIES, List.of("cap1", "cap2", "cap3")));
     }
-
 }
